Fixed the profile pic alignment, the css had the same name, so thats why it bugged

--- a/src/Css/PlayerMapStats.css
+++ b/src/Css/PlayerMapStats.css
@@ -51,7 +51,7 @@ body {
     width: auto;
 }
 
-.profile-picture {
+.profile-picture-mapStats {
     width: 100px;
     height: 100px;
     border-radius: 50%;
