--- a/src/Css/PlayerStats.css
+++ b/src/Css/PlayerStats.css
@@ -26,7 +26,7 @@ body {
     margin-bottom: 20px;
 }
 
-.profile-picture {
+.profile-picture-playerStats {
     width: 100px;
     height: 100px;
     border-radius: 50%;
